# p2p-stream

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pc-smoke.yml
config/: video-node.env
device-profiles/: jetson.ini  macos.ini  nxp.ini  pc.ini  pi_zero2w.ini  rpi4.ini
src/: control.c  control.h  event_bus.c  event_bus.h  logger.c  logger.h  main.c  net_monitor.c  net_monitor.h  state_machine.c  state_machine.h
src/pipeline/: client.c  client.h  host.c  host.h  pipeline.c  pipeline.h  profile.c  profile.h  receiver.c  receiver.h  sender.c  sender.h
systemd/: p2p-stream.service
tests/: README.md  pc_smoke.sh
